[package]
name = "blinkscan"
version = "0.1.2"
edition = "2021"
repository = "https://github.com/thewh1teagle/blink"
description = "Network scanner in speed of a blink"
license = "MIT"

[lib]
name = "blinkscan"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
colored = "2.1.0"
crossbeam-channel = "0.5.13"
csv = "1.3.0"
dns-lookup = "2.0.4"
eyre = "0.6.12"
humantime = "2.1.0"
indicatif = "0.17.8"
ipnetwork = "0.20.0"
macaddr = "1.0.1"
netdev = { version = "0.28.0", features = ["serde"] }
netneighbours = "0.1.2"
pinger = "1.1.1"
reqwest = "0.12.4"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
tracing-subscriber = "0.3.18"

[build-dependencies]
reqwest = { version = "0.11", features = ["blocking"] }


# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.15.1"
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
]
# CI backends to support
ci = "github"
# Publish jobs to run in CI
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = false
